# malk-rs

./: Cargo.toml  README.md
doc/: README.md  basic_types.md  equality_types.md  erasure.md  identifiers.md  impls.md  linearity.md  recursion.md  universes.md
doc/draft/: codegen.md  effects.md  issues.md  layout.md  metaprogramming.md  pointers.md  strings.md
doc/draft/rambling/: ints.txt  modules.md  (+3 more)
examples/: parse.rs
src/: debug.rs  lexer.rs  lib.rs
src/construct/: ctx.rs  enum_term.rs  enum_type.rs  expr.rs  func_app.rs  func_term.rs  ident.rs  let_expr.rs  mod.rs  pattern.rs  struct_term.rs  struct_type.rs
src/core/: constraints.rs  ctx.rs  fold.rs  meta.rs  mod.rs  name.rs  ops.rs  origin.rs  rank.rs  term.rs  typecheck.rs
src/parse/: composite_term_elem.rs  composite_type.rs  composite_type_elem.rs  document.rs  enum_term.rs  enum_type.rs  expr.rs  func_term.rs  grammar.rustpeg  ident.rs  mod.rs  pattern.rs  struct_term.rs  struct_term_elem.rs  struct_type.rs  struct_type_elem.rs
src/parse.old/: composite_term_elem.rs  composite_type.rs  composite_type_elem.rs  enum_term.rs  enum_type.rs  expr.rs  func_app.rs  func_term.rs  func_type.rs  ident.rs  let_expr.rs  level_literal.rs  mod.rs  parens.rs  pattern.rs  struct_term.rs  struct_type.rs  type_literal.rs  typed.rs
src/render/: mod.rs  rope.rs
src/typecheck.bak/: context.rs  context.rs.bak2  debug.rs  expr.rs  func_app.rs  func_term.rs  func_type.rs  let_expr.rs  meta_context.rs  mod.rs  numeric.rs  pattern.rs  pattern.rs.bak  pattern.rs.bak2  struct_term.rs  struct_type.rs  typed.rs  variable.rs
(+3 files in other folders)
