[package]
name = "malk"
version = "0.1.0"
authors = ["Andrew Cann <shum@canndrew.org>"]

[dependencies]
num = "*"
peg = { version = "0.5", features = [ "trace" ] }
peg-syntax-ext = "0.5"
serde_json = "0.9"
jsonrpc-core = "6"
jsonrpc-tcp-server = "6"
mio = "0.6.9"

[lib]
name = "malk"
path = "src/lib.rs"

[[bin]]
name = "malk-server"
path = "src/bin/server/main.rs"

